# ADA

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/: __init__.py  app.py  auth.py  brain.py  character.py  character_config.py  chat.py  creation.py  global_config.py  landing.py  selection.py  test_db.py
src/json exp/: skill.json
src/json_exp/: classes.json  enemies.json  item.json
src/static/: campaign.css  character_sheet.css  chat.css  landing.css  style.css
src/static/character_selection/: character_selection.css  character_selection.js
src/static/character_sheet/: character_sheet.css  character_sheet.js
src/static/chat/: chat.css  chat.js  old_chat.css
src/static/landing/: landing.css  landing.js
src/templates/: base.html  character_selection.html  character_sheet.html  landing.html
src/templates/auth/: auth_base.html  login.html  register.html
src/templates/campaign/: campaign_client.html  campaign_host.html
src/templates/character_selection/: character_selection.html
src/templates/character_sheet/: character_sheet.html
src/templates/chat/: chat.html
src/templates/landing/: landing.html
