[project]
name = "ada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "mongoengine>=0.29.1",
    "openai>=2.13.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
]
